--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.34.0
-spacy==3.7.1
-scikit-learn
-python-docx
-PyMuPDF
+streamlit==1.35.0
+PyMuPDF==1.23.21
+sentence-transformers==2.7.0
+requests==2.31.0
+torch>=1.13.0  # Needed for SentenceTransformer backend
